// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the IconButton Component correctly 1`] = `
<button
  className="sc-kAzzGY dvWRck"
  onClick={[Function]}
>
  <i
    className="material-icons  sc-iwsKbI iNORPb"
    color={undefined}
    scale={undefined}
  >
    check_circle
  </i>
</button>
`;

exports[`renders the IconButton Component correctly 2`] = `
<button
  className="sc-kAzzGY dvWRck"
  onClick={[Function]}
>
  <i
    className="material-icons  sc-iwsKbI etWfbt"
    color="success"
    scale="l"
  >
    check_circle
  </i>
</button>
`;

exports[`renders the IconButton Component correctly 3`] = `
<button
  className="sc-kAzzGY dvWRck"
  onClick={[Function]}
>
  <i
    className="material-icons  sc-iwsKbI cLKlHh"
    color="success"
    scale="l"
  >
    autorenew
  </i>
</button>
`;
